Trying to fix question 5 mobile image alignment

--- a/src/scss/partials/_image.scss
+++ b/src/scss/partials/_image.scss
@@ -11,6 +11,20 @@
     display: block;
   }
 }
+.custom-image-wrapper{
+  overflow: hidden;
+  width: 100%;
+  text-align: center;
+
+  img,
+  svg {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+  }
+}
 
 // image aspect ratio's
 .img--adapt,
