--- a/src/scss/section/section-two-column-info-block.scss
+++ b/src/scss/section/section-two-column-info-block.scss
@@ -149,3 +149,7 @@ $heatwave-colors: (
     background: url($color) no-repeat center / cover;
   }
 }
+
+.custom-image {
+  width: auto;
+}
